@@ -7,13 +7,15 @@ Change gpgme to use gpg2.exe by default.
 
 --- gpgme/w32-util.c
 +++ gpgme/w32-util.c
-@@ -274,7 +275,7 @@
+@@ -307,9 +307,9 @@
    if (!gpg_program)
      gpg_program = find_program_in_registry ("gpgProgram");
    if (!gpg_program)
+-    gpg_program = find_program_in_inst_dir ("gpg.exe");
++    gpg_program = find_program_in_inst_dir ("gpg2.exe");
+   if (!gpg_program)
 -    gpg_program = find_program_at_standard_place ("GNU\\GnuPG\\gpg.exe");
 +    gpg_program = find_program_at_standard_place ("GNU\\GnuPG\\gpg2.exe");
- #ifdef GPG_PATH
-   if (!gpg_program)
-     gpg_program = GPG_PATH;
-
+   UNLOCK (get_path_lock);
+   return gpg_program;
+ }
